--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "predev": "rimraf node_modules/.vite/deps",
+    "dev": "npm run predev && vite",
+    "prebuild": "rimraf node_modules/.vite/deps",
+    "build": "npm run prebuild && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "prepreview": "rimraf node_modules/.vite/deps",
+    "preview": "npm run prepreview && vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
+    "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.19",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "fuse.js": "^7.0.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.4"
+    "react-router-dom": "^6.23.1",
+    "tailwindcss": "^3.4.4",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -37,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.3",
+    "rimraf": "^5.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
