--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predev": "rimraf node_modules/.vite/deps",
+    "predev": "rimraf node_modules/.vite",
     "dev": "npm run predev && vite",
-    "prebuild": "rimraf node_modules/.vite/deps",
+    "prebuild": "rimraf node_modules/.vite",
     "build": "npm run prebuild && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepreview": "rimraf node_modules/.vite/deps",
