--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run prebuild && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepreview": "rimraf node_modules/.vite/deps",
-    "preview": "npm run prepreview && vite preview"
+    "preview": "npm run prepreview && vite preview",
+    "clean-file": "node logCleanup.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -21,7 +22,9 @@
     "@mui/material": "^5.15.19",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "fs": "^0.0.1-security",
     "fuse.js": "^7.0.0",
+    "glob": "^10.4.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
