--- a/package.json
+++ b/package.json
@@ -20,16 +20,13 @@
     "@mdi/react": "^1.6.1",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.19",
-    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "driver.js": "^1.3.1",
     "fs": "^0.0.1-security",
-    "fuse.js": "^7.0.0",
     "glob": "^10.4.1",
-    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.4",
     "use-debounce": "^10.0.1"
   },
   "devDependencies": {
